# GoIT_h11_12_REST_API_contacts

./: .gitignore  README.md  alembic.ini  env  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
goit_h11_rest_api_contacts/: schemas.py
goit_h11_rest_api_contacts/database/: db.py  dependencies.py  models.py
goit_h11_rest_api_contacts/repository/: abstract_repository.py  contacts.py
goit_h11_rest_api_contacts/routes/: contacts.py
migrations/: env.py
migrations/versions/: 03dc5516dc59_add_user_model.py  31efe23604b8_user_add_confirmed_field.py  4df5b71b9d07_change_sqlalchemy_url_settings.py  4f4025305890_add_unique_email_and_phone_per_user.py  6652028e2dad_change_the_type_of_column_additional_.py  8a8b1a66c43d_init.py  8ff81c94d561_change_max_length_of_additional_info.py  966de74c088f_add_salt_to_user_model.py  d6ee4a1d798f_add_user_avatar.py  fb396bd958a2_init.py
src/: auth.py  schemas.py
src/conf/: config.py
src/database/: db.py  dependencies.py  models.py
src/repository/: abstract_repository.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  data_set_for_tests.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
