[tool.poetry]
name = "goit-h11-rest-api-contacts"
version = "0.1.0"
description = ""
authors = ["Paweł Szumański <pawel.szumanski@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.32"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.2.1"
libgravatar = "^1.0.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
